syntax = "proto3";

option go_package = "github.com/steadfastie/liaison/go/generated/service;service_v1";

import "google/protobuf/timestamp.proto";
import "tracking_shipment.proto";

package liaison.v1;

message PlaceRequest {
  repeated Shipment shipments = 1;
  google.protobuf.Timestamp validUntill = 2;
}